--- a/pom.xml
+++ b/pom.xml
@@ -1,108 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<mmoframe:project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                   xmlns:mmoframe="http://maven.apache.org/POM/4.0.0"
                   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <mmoframe:modelVersion>4.0.0</mmoframe:modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-    <mmoframe:name>MMOServer</mmoframe:name>
-    <mmoframe:description>MMOServer</mmoframe:description>
-    <mmoframe:groupId>mmo</mmoframe:groupId>
-    <mmoframe:artifactId>MMOServer</mmoframe:artifactId>
-    <mmoframe:version>1.0-SNAPSHOT</mmoframe:version>
+    <name>MMOServer</name>
+    <description>MMOServer</description>
+    <groupId>mmo</groupId>
+    <artifactId>MMOServer</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-    <mmoframe:properties>
-        <mmoframe:maven.compiler.source>8</mmoframe:maven.compiler.source>
-        <mmoframe:maven.compiler.target>8</mmoframe:maven.compiler.target>
-        <mmoframe:kotlin.version>1.6.10</mmoframe:kotlin.version>
-    </mmoframe:properties>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <kotlin.version>1.6.10</kotlin.version>
+    </properties>
 
-    <mmoframe:dependencies>
-        <mmoframe:dependency>
-            <mmoframe:groupId>io.netty</mmoframe:groupId>
-            <mmoframe:artifactId>netty-all</mmoframe:artifactId>
-            <mmoframe:version>4.1.86.Final</mmoframe:version>
-        </mmoframe:dependency>
-        <mmoframe:dependency>
-            <mmoframe:groupId>org.apache.commons</mmoframe:groupId>
-            <mmoframe:artifactId>commons-lang3</mmoframe:artifactId>
-            <mmoframe:version>3.12.0</mmoframe:version>
-        </mmoframe:dependency>
-        <mmoframe:dependency>
-            <mmoframe:groupId>org.apache.commons</mmoframe:groupId>
-            <mmoframe:artifactId>commons-text</mmoframe:artifactId>
-            <mmoframe:version>1.10.0</mmoframe:version>
-        </mmoframe:dependency>
-        <mmoframe:dependency>
-            <mmoframe:groupId>org.junit.jupiter</mmoframe:groupId>
-            <mmoframe:artifactId>junit-jupiter-api</mmoframe:artifactId>
-            <mmoframe:version>5.8.2</mmoframe:version>
-            <mmoframe:scope>test</mmoframe:scope>
-        </mmoframe:dependency>
-        <mmoframe:dependency>
-            <mmoframe:groupId>org.apache.logging.log4j</mmoframe:groupId>
-            <mmoframe:artifactId>log4j-core</mmoframe:artifactId>
-            <mmoframe:version>2.17.1</mmoframe:version>
-        </mmoframe:dependency>
-        <mmoframe:dependency>
-            <mmoframe:groupId>org.jetbrains.kotlin</mmoframe:groupId>
-            <mmoframe:artifactId>kotlin-stdlib-jdk8</mmoframe:artifactId>
-            <mmoframe:version>${kotlin.version}</mmoframe:version>
-        </mmoframe:dependency>
-        <mmoframe:dependency>
-            <mmoframe:groupId>org.jetbrains.kotlin</mmoframe:groupId>
-            <mmoframe:artifactId>kotlin-test</mmoframe:artifactId>
-            <mmoframe:version>${kotlin.version}</mmoframe:version>
-            <mmoframe:scope>test</mmoframe:scope>
-        </mmoframe:dependency>
-    </mmoframe:dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.86.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-    <mmoframe:build>
-        <mmoframe:plugins>
-            <mmoframe:plugin>
-                <mmoframe:groupId>org.jetbrains.kotlin</mmoframe:groupId>
-                <mmoframe:artifactId>kotlin-maven-plugin</mmoframe:artifactId>
-                <mmoframe:version>${kotlin.version}</mmoframe:version>
-                <mmoframe:executions>
-                    <mmoframe:execution>
-                        <mmoframe:id>compile</mmoframe:id>
-                        <mmoframe:phase>compile</mmoframe:phase>
-                        <mmoframe:goals>
-                            <mmoframe:goal>compile</mmoframe:goal>
-                        </mmoframe:goals>
-                    </mmoframe:execution>
-                    <mmoframe:execution>
-                        <mmoframe:id>test-compile</mmoframe:id>
-                        <mmoframe:phase>test-compile</mmoframe:phase>
-                        <mmoframe:goals>
-                            <mmoframe:goal>test-compile</mmoframe:goal>
-                        </mmoframe:goals>
-                    </mmoframe:execution>
-                </mmoframe:executions>
-                <mmoframe:configuration>
-                    <mmoframe:jvmTarget>1.8</mmoframe:jvmTarget>
-                </mmoframe:configuration>
-            </mmoframe:plugin>
-            <mmoframe:plugin>
-                <mmoframe:groupId>org.apache.maven.plugins</mmoframe:groupId>
-                <mmoframe:artifactId>maven-compiler-plugin</mmoframe:artifactId>
-                <mmoframe:executions>
-                    <mmoframe:execution>
-                        <mmoframe:id>compile</mmoframe:id>
-                        <mmoframe:phase>compile</mmoframe:phase>
-                        <mmoframe:goals>
-                            <mmoframe:goal>compile</mmoframe:goal>
-                        </mmoframe:goals>
-                    </mmoframe:execution>
-                    <mmoframe:execution>
-                        <mmoframe:id>testCompile</mmoframe:id>
-                        <mmoframe:phase>test-compile</mmoframe:phase>
-                        <mmoframe:goals>
-                            <mmoframe:goal>testCompile</mmoframe:goal>
-                        </mmoframe:goals>
-                    </mmoframe:execution>
-                </mmoframe:executions>
-            </mmoframe:plugin>
-        </mmoframe:plugins>
-    </mmoframe:build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jvmTarget>1.8</jvmTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>testCompile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-</mmoframe:project>
+</project>
